--- a/estilo.css
+++ b/estilo.css
@@ -28,25 +28,25 @@
     color: white;
 }
 #tituo_4{
+    
     background-color: red;
     padding: 25px;
     height: 25%;
     color: white;
 }
 
-.grid-container{
+.container{
     display: grid;
     grid-template-areas: 
         "sidebar main";
-
+    grid-template-columns: repeat (3, 1fr) ;
 }
 
-
-
 .sidebar ul li a {
-
+    grid-column: 1/1;
     background:black;
     text-decoration: none;
     color: white;
 
 }
+
